test/classes/errors/nilability-assign/assign-oknil-borrowed-from-oknil-nil.chpl
//  lhs: borrowed?  rhs: nil?  ok

class MyClass {  var x: int;  }

var lhs: borrowed MyClass? = nil;


lhs = nil;


